# li-enteract

./: .gitignore  CLEANUP_SCRIPT_README.md  CONTRIBUTING.md  CONVERSATIONAL_ASSISTANT_V2_PR.md  ENHANCED_RAG_IMPLEMENTATION.md  GAZE_TRACKING_INTEGRATION.md  MACOS_AUDIO_LOOPBACK_PLAN.md  MIGRATION_GUIDE.md  ML_EYE_TRACKING_SETUP.md  README.md  SPEECH_FIX_SUMMARY.md  SPEECH_IMPLEMENTATION.md  SQLITE_MIGRATION_COMPLETE.md  chat-context-memory-management.md  cleanup_aggregate_devices.sh  context-chat.md  eye_tracker_calibration.json  improved_eye_tracker_calibration.json  index.html  install_ml_deps.bat  install_ml_deps.sh  install_speech_deps.bat  install_speech_deps.sh  migration_schema.sql  multi_monitor_eye_tracker_calibration.json  package-lock.json  package.json  phase-1.md  phase-3.md  requirements_speech.txt  run_phase2_tests.sh  tailwind.config.js  vite.config.ts  whisper-rs-implementation.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
cleanup_workspace/: Cargo.toml
cleanup_workspace/src/: main.rs
resources/: PHASE_1_COMPLETION.md  PHASE_2_COMPLETION.md  RAG_IMPLEMENTATION_DOCUMENTATION.md  SPEECH_TRANSCRIPTION_OPTIMIZATIONS.md  TRANSPARENCY_USAGE.md  gaze-tracking-implementation.md  phase-2.md  proper-speech-transcription.md  test_audio_fix.md  transparency.md  whisper-rs-branch.md
sandbox/: README.md  device_enumerator.rs  main.rs  real-time-optimized-whisper-transcriber.py  simple_audio_capture.rs  transcribe.md  whisper_transcriber.rs
src/: App.vue  style.css
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json  test_audio_recording.rs  transcription_debug.txt
src-tauri/audio_capture_lib/: Cargo.toml  DESIGN.md  README.md  build.rs
src-tauri/audio_capture_lib/examples/: basic_capture.rs  test_aggregate_device.rs  test_aggregate_device_creation.rs  test_aggregate_device_setup.rs  test_audio_streaming.rs  test_automated_setup.rs  test_basic_enumeration.rs  test_cf_functions.rs  test_default_devices.rs  test_device_enumeration.rs  test_existing_aggregate_device.rs  test_simple_aggregate.rs  test_simple_audio_streaming.rs
src-tauri/audio_capture_lib/src/: audio_processor.rs  capture_engine.rs  device_enumerator.rs  lib.rs  types.rs
src-tauri/audio_capture_lib/src/macos/: aggregate_device.rs  aggregate_device_creator.rs  aggregate_device_manager.rs  audio_streamer.rs  audio_tap.rs  core_audio_bindings.rs  core_audio_capture.rs  core_audio_enumerator.rs  mod.rs
src-tauri/capabilities/: default.json
src-tauri/src/: audio_loopback.rs  chunking_service.rs  data_store.rs  embedding_service.rs  enhanced_rag_commands.rs  enhanced_rag_system.rs  eye_tracking.rs  file_handler.rs  gpu_detection.rs  lib.rs  main.rs  ollama.rs  rag_commands.rs  rag_system.rs  screenshot.rs  search_service.rs  simple_embedding_service.rs  speech.rs  system_info.rs  system_prompts.rs  transparency.rs  window_manager.rs
src-tauri/src/audio_loopback/: audio_processor.rs  capture_engine.rs  device_enumerator.rs  macos_device_enumerator.rs  mod.rs  quality_filter.rs  settings.rs  types.rs
src-tauri/src/audio_loopback/macos/: audio_recorder.rs  capture_engine.rs  capture_engine_with_library.rs  core_audio_bindings.rs  device_enumerator.rs  device_loader.rs  mod.rs  tests.rs
src-tauri/src/audio_loopback/windows/: capture_engine.rs  device_enumerator.rs  mod.rs
src-tauri/src/data/: README.md  connection_pool.rs  errors.rs  logging.rs  migration.rs  mod.rs  types.rs
src-tauri/src/data/chat/: commands.rs  mod.rs  storage.rs
src-tauri/src/data/conversation/: commands.rs  mod.rs  storage.rs
src-tauri/src/mcp/: commands.rs  mod.rs  server.rs  tools.rs  types.rs
src/components/: DatabaseStatus.vue  MessageSaveIndicator.vue  MigrationHelper.vue
src/components/conversational/: AIAssistant.vue  ConversationSidebar.vue  ConversationSidebarAdapter.vue  ExportControls.vue  LiveAI.vue  MessageItem.vue  MessageList.vue
src/components/core/: AIModelsPanel.vue  AdvancedGazeDemo.vue  AgentActionButtons.vue  AudioLoopbackControl.vue  CalibrationModal.vue  ChatDrawer.vue  ChatSidebar.vue  ChatSidebarAdapter.vue  ChatWindow.vue  ChatWindowSidebar.vue  ChatWindowSidebarAdapter.vue  ControlPanel.vue  ControlPanelButtons.vue  ConversationalWindow.vue  DocumentPillsContainer.vue  EyeTrackingTest.vue  GenericSidebar.vue  HomeScreen.vue  MinimizedView.vue  ModelSelector.vue  PanelWindows.vue  RefractionBorder.vue  SettingsPanel.vue  TransparencyControls.vue  WakeWordControl.vue  WindowHeader.vue
src/components/three/: ThreeScene.vue
src/composables/: agentService.ts  contextManager.ts  fileService.ts  index.ts  markdownRenderer.ts  mcpService.ts  sessionManager.ts  sharedState.ts  storageService.ts  useAIAssistant.ts  useAIModels.ts  useAdvancedGazeTracking.ts  useAudioLoopback.ts  useAudioSettings.ts  useCameraManager.ts  useChatManagement.ts  useComputerVision.ts  useControlPanelEvents.ts  useControlPanelState.ts  useConversationManagement.ts  useConversationTempo.ts  useEyeTracking.ts  useGPUStatus.ts  useGazeWindowControl.ts  useGpuInfo.ts  useLiveAI.ts  useLoopbackTranscription.ts  useMLEyeTracking.ts  useMessagePersistence.ts  useRagDocuments.ts  useResponseGenerator.ts  useSpeechEvents.ts  useSpeechTranscription.ts  useThreeScene.ts  useTransparency.ts  useWakeWordDetection.ts  useWindowManager.ts  useWindowRegistry.ts  useWindowResizing.ts  visionService.ts
src/directives/: windowRegistry.ts
src/lib/: eye-tracking-ml-backup.py  eye-tracking-ml.py  gaze-ml-improved.py  gaze-ml-test.py  gaze-tracker-application.py  gaze-tracker.py  monitor-detection.py  multi-screen-eye-tracking.py  requirements.txt
src/resources/: live-ai-templates.md
src/services/: enhancedRagService.ts  ragService.ts  whisperService.ts
src/stores/: app.ts  conversation.ts  ollamaCache.ts
src/tests/: README.md  TESTS.md  setup.ts
src/types/: chat.ts  eyeTracking.ts  index.ts  monitor.ts  speechTranscription.ts  windowTypes.ts
src/utils/: browserCompat.ts  formatters.ts  sidebarTransformers.ts
(+18 files in other folders)
