[package]
name = "enteract"
version = "0.1.0"
description = "A Tauri App"
authors = ["Rohan Singh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "enteract_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
rand = "0.8"

# Speech transcription dependencies (for wake word detection)
whisper-rs = "0.10"
anyhow = "1.0"
base64 = "0.22"
tempfile = "3.0"
reqwest = { version = "0.11", features = ["stream", "json"] }
futures-util = "0.3"
xcap = "0.6.1"
image = { version = "0.25", features = ["png"] }
# File processing dependencies
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
pdf-extract = "0.7"

# Platform-specific dependencies for transparency
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics",
    "Win32_Graphics_Gdi"
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-graphics = "0.23"

