[package]
name = "enteract"
version = "0.1.0"
description = "Local AI Agents by Quaternion Studios"
authors = ["Rohan Singh", "Chase Allen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "enteract_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
async-trait = "0.1.77"

# Speech transcription dependencies (for wake word detection)
whisper-rs = "0.12"
anyhow = "1.0"
base64 = "0.22"
tempfile = "3.0"
reqwest = { version = "0.11", features = ["stream", "json"] }
futures-util = "0.3"
xcap = "0.6.1"
image = { version = "0.25", features = ["png"] }
# File processing dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
pdf-extract = "0.7"
sha2 = "0.10"
rubato = "0.15"
hound = "3.5"
wasapi = "0.13"
ctrlc = "3.4"
bytemuck = "1.13"
dirs = "5.0"

# RAG system dependencies
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
tantivy = { version = "0.22", features = ["mmap"] }
tiktoken-rs = "0.5"

# MCP system dependencies
rmcp = { version = "0.2.0", features = ["server", "client"] }
enigo = "0.2"

# Additional dependencies for enhanced error handling
thiserror = { version = "1.0", optional = true }
log = "0.4.21"
env_logger = { version = "0.10", optional = true }
regex = "1.10.3"

# Platform-specific dependencies for transparency
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    # OCR API features
    "Media_Ocr",
    "Storage_Streams",
    "Graphics_Imaging",
    "Storage",
    "Foundation",
    "Foundation_Collections"
] }
winapi = { version = "0.3", features = [
    "winuser",
    "windef",
    "minwindef",
    "libloaderapi",
    "errhandlingapi",
    "processthreadsapi",
    "winnt",
    "handleapi"
] }

# Note: image and base64 dependencies already declared above

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-graphics = "0.23"
