[package]
name = "audio_capture_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
thiserror = "1.0"

# Audio processing
cpal = "0.15"

# Async and threading
futures = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# FFI for Core Audio
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies
core-foundation = "0.9"
core-foundation-sys = "0.8"
objc = "0.2"
objc-foundation = "0.1"
objc2-core-audio = { version = "0.3", features = ["AudioHardware"] }
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[lib]
name = "audio_capture_lib"
crate-type = ["cdylib", "rlib"]
